# windflow

./: .dockerignore  .editorconfig  .env.prod.example  .flake8  .gitattributes  .gitignore  .pylintrc  .roomodes  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  DOCKER-ENVIRONMENTS.md  LICENSE  MIGRATION_CELERY_TO_ASYNCIO.md  Makefile  PRODUCTION-DEPLOYMENT.md  README.md  SECURITY.md  Vagrantfile  docker-compose-dev.yml  docker-compose.extensions.yml  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  redis-compose.yaml  run.sh
.backlog/: bug.md  epic.md  kanban.md  story.md  sub-story.md
.backlog/epics/: EPIC-001-plugin-system-marketplace.md  EPIC-002-vm-management.md  EPIC-003-security-gitops-multitarget.md  EPIC-004-ui-refacto-cleanup.md  EPIC-005-backend-integration-tests.md  EPIC-006-frontend-integration-tests.md  EPIC-007-test-mocks-infrastructure.md  EPIC-008-frontend-api-coverage.md  EPIC-008-unocss-colors-homogenization.md  EPIC-009-container-detail-completeness.md  EPIC-009-container-detail-refonte-edition-complete.md
.backlog/stories/: STORY-001-vue-globale-compute-bandeau-statistiques.md  STORY-002-refactoring-services-listage-docker.md  STORY-002-section-discovered-liste-unifiee.md  STORY-003-wizard-adoption-objets-decouverts.md  STORY-004-actions-globales-stack-start-stop-redeploy.md  STORY-005-gestion-images-docker-liste-visualisation.md  STORY-006-gestion-images-docker-pull-suppression.md  STORY-007-export-stacks-json.md  STORY-008-import-stacks-json.md  STORY-009-mise-a-jour-deployments.md  STORY-010-duplication-stack.md  STORY-011-archivage-stack.md  STORY-012-promotion-container-standalone-en-stack.md  STORY-013-gestion-volumes-docker-liste-creation.md  STORY-014-gestion-volumes-docker-suppression.md  (+65 more)
.clinerules/: 00-project-context.md  01-Project-management.md  05-tech-stack.md  10-reuse-migration-strategy.md  20-architecture-and-api.md  30-code-standards.md  35-testing-quality-gates.md  40-security.md  45-observability.md  50-dev-workflow.md  55-project-structure.md  60-output-format.md  Project_structure.md  README.md  ai-guidelines.md  backend.md  cli.md  frontend.md  general.md  infrastructure.md  testing.md
.husky/: commit-msg
.junie/: guidelines.md
.kilocode/: Development_workflow.md  ai-guidelines.md  cli.md  general.md  mcp.json  rules.md  testing.md  testing_rules.md
.roo/: mcp.json
cli/: README.md  __init__.py  __main__.py  client.py  completion.sh  config.py  session.py  utils.py
colibri/: bunfig.toml  svelte.config.js
doc/: API-MIGRATION-PLAN.md  ARCHITECTURE-MODULAIRE.md  CI-CD-GUIDE.md  DEPLOYMENTS-AND-CELERY-GUIDE.md  DESIGN-SYSTEM.md  DYNAMIC-FORMS.md  EXTENSIONS-GUIDE.md  IMPLEMENTATION-ROADMAP.md  JINJA2-FUNCTIONS.md  STACK-DEFINITIONS.md  SUIVI-FAST-STARTUP-PLAN.md  VIRTUALIZATION-SYSTEMS.md  WEBSOCKET-REAL-TIME.md  fast-startup-plan.md
docs_colibri/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-DOCKER-API-MODULE.md  04-AUTHENTICATION.md  05-GIT-INTEGRATION.md  06-AUTO-UPDATES.md  08-HAWSER-PROXY.md  09-SCHEDULER.md  10-ENCRYPTION.md  13-BACKGROUND-PROCESSES.md  14-DEPLOYMENT.md  15-CODE-SNIPPETS.md  16-VOLUME-BROWSER.md  17-ARCHITECTURE_DOCKER_COMPOSE_EDITOR.md  README.md
docs_windflow_simple/: 00-OVERVIEW.md  01-ARCHITECTURE.md  03-DATABASE-SCHEMA.md  04-AUTHENTICATION.md  07-VULNERABILITY-SCANNING.md  10-ENCRYPTION.md  12-VOLUME-BROWSER.md  13-BACKGROUND-PROCESSES.md  14-DEPLOYMENT.md  README.md
frontend/: .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.json  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: enable-extension.sh  install.sh
stacks_definitions/: README.md  baserow.yaml  postgresql.yaml
(+568 files in other folders)
