[tool.poetry]
name = "windflow"
version = "0.1.0"
description = ""
authors = ["stephane apiou <stephane@apiou.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.120.0"
uvicorn = {version = "^0.38.0", extras = ["standard"]}
websockets = "^15.0.0"
sqlalchemy = {version = "^2.0.0", extras = ["asyncio"]}
aiosqlite = "^0.21.0"
pydantic = "^2.12.0"
asyncssh = "^2.14.0"
docker = "^7.0.0"
libvirt-python = "^11.8.0"
pydantic-settings = "^2.0.0"
email-validator = "^2.0.0"
python-multipart = "^0.0.20"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["argon2"]}
argon2-cffi = "^23.0.0"
celery = "^5.3.0"
redis = "^7.0.0"
litellm = "^1.79.0"
httpx = "^0.28.0"
pyyaml = "^6.0.0"
rich = "^14.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
pytest-benchmark = "^4.0.0"
pytest-sugar = "^0.9.7"
pytest-clarity = "^1.0.1"
faker = "^22.0.0"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
respx = "^0.20.0"

[tool.poetry.scripts]
windflow = "cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=backend/app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "asyncio: mark test as asyncio test",
    "unit: mark test as unit test",
    "integration: mark test as integration test",
]

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
